--- a/Robokassa_Library/src/main/AndroidManifest.xml
+++ b/Robokassa_Library/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".SimplePay.RobokassaActivity"
+            android:name=".view.RobokassaActivity"
             android:exported="false" />
     </application>
 </manifest>
